--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+node_modules/
+dist/
+.angular/
+.env
+
 # Compiled output
 /dist
 /tmp
