--- a/angular.json
+++ b/angular.json
@@ -19,9 +19,15 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+               {
+    "glob": "**/*",
+    "input": "src/assets",
+    "output": "assets"
+  }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "server": "src/main.server.ts",
@@ -77,7 +83,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+               {
+    "glob": "**/*",
+    "input": "src/assets",
+    "output": "assets"
+  }
             ],
             "styles": [
               "src/styles.css"
